# auth-server

./: Justfile  pyproject.toml
.github/workflows/: release.yaml
auth/: app.py  main.py
auth/config/: __init__.py  policy.py
auth/controllers/: __init__.py  auth.py  index.py
auth/controllers/dto/: __init__.py  request.py  response.py
auth/domain/: __init__.py  entities.py  errors.py  models.py
auth/repository/: __init__.py  access.py  auth.py  orm.py  session.py  token.py
auth/usecase/: __init__.py
auth/usecase/auth/: __init__.py  change_password.py  refresh.py  signin.py  signout.py  signup.py  verify_session.py  verify_token.py
auth/utils/: crypto.py
docker/: Dockerfile  postgres.yaml
prisma/: schema.prisma
prisma/migrations/20230706140610_users/: migration.sql
prisma/migrations/20230706162102_sessions/: migration.sql
prisma/migrations/20230709234842_access_log/: migration.sql
